--- a/randomimage.html
+++ b/randomimage.html
@@ -11,3 +11,9 @@
     <image src=https://picsum.photos/id/124/200/300></image>
     <image src=https://picsum.photos/id/125/200/300></image>
 </main>
+h1 {
+  color: rgba(222, 177, 16, 0.956);
+}
+body {
+  background-color: rgba(50, 53, 14, 0.839);
+}
